css.css
body {
    font-family: "Century Gothic", Arial, sans-serif;    background-color: black;
    text-align: center;
    color: white;
}


footer {
    margin:  3em auto;
    border-top: 1px #000 solid;
    width: 80%;
}

#dropSearch {
    width: 100%;
    padding: 3%;
    color: white;
    border: 1px solid cornflowerblue;
    background-color: #181818;
    border-radius: 2%;
    outline: none;
    box-shadow: none;
    margin-top: 2%;
    margin-bottom: 2%;
    box-sizing: border-box;
}

#dropBox > div, #dropBox > input {
    /*background-color: #181818;*/
    width: 100%;
    text-align: center;
    margin: 0;
}

#dropBox {
    position: absolute;
    left: 5%;
    width: 22%;
    display: block grid;
    box-sizing: border-box;
}
#dropDown > p, #dropDown > link{
    padding: 10px;
    background-color: #181818;
    width: 100%;
    text-align: center;
    margin: 0;
    overflow: hidden;
    word-wrap: break-word; /* Breaks long words to fit inside */
    white-space: normal;   /* Allows text to wrap to the next line */
    box-sizing: border-box; /* Includes padding in the element's width */
    display: block;
}
#dropDown {
    border-top: 1px cornflowerblue solid;
    border-bottom: 1px cornflowerblue solid;
    width: 100%;
    max-height: 330px;
    min-height: 330px;
    overflow-y: scroll;
    overflow-x: hidden;
    box-sizing: border-box;
}

.hide {
    display: none;
}

.container {
    padding: 3%;
    text-align: center;
    background-color: #1f1e1e;
    border: 2px #C0C0C0 solid;
    border-radius: 10px;
    overflow: hidden;
    margin: 0;
}

.container:hover {
    position: relative;
    z-index: 10;
    transform: scale(1.05);
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
    border: 3px solid cornflowerblue;
    transition: transform 0.4s ease, box-shadow 0.3s ease;

}


main {
    height: 600px;
}

.text-div {
    border: 1px solid white;
    padding: 2%;
    text-align: center;
    margin: 2%;
}

#title {
    text-align: center;
    border-bottom: 2px #181818 solid;
}

.text {
    width : 80%;
    margin: 0 auto;
    margin-top: 2%;
    padding: 2%;
    border: 1px solid #e6e3e3;
    background-color: #181818;
    color: #C0C0C0;
    overflow-wrap: break-word;  /* Same as above, modern syntax */
    white-space: pre-wrap;  /* Ensures the text will wrap and doesn't overflow */
    max-width: 100%; /* Ensure it doesn't overflow the container */
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(25%, 3fr));
    gap: 10px;
    vertical-align: middle;
}

.text > div > img{
    max-height: 200px;
}

.text > div > img:hover {
    cursor: pointer;
    image-rendering: -webkit-crisp-edges;
}

@media screen and (max-width: 1200px) {
    .text {
        width : 80%;
        margin : 0 auto;
        margin-top: 2%;
        padding: 2%;
        border: 1px solid #e6e3e3;
        background-color: #181818;
        color: #C0C0C0;
        overflow-wrap: break-word;  /* Same as above, modern syntax */
        white-space: pre-wrap;  /* Ensures the text will wrap and doesn't overflow */
        max-width: 100%; /* Ensure it doesn't overflow the container */
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(35%, 2fr));
        gap: 10px;
        vertical-align: middle;
    }
}

@media screen and (max-width: 800px) {
    .text {
        width : 80%;
        margin : 0 auto;
        margin-top: 2%;
        padding: 2%;
        border: 1px solid #e6e3e3;
        background-color: #181818;
        color: #C0C0C0;
        overflow-wrap: break-word;  /* Same as above, modern syntax */
        white-space: pre-wrap;  /* Ensures the text will wrap and doesn't overflow */
        max-width: 100%; /* Ensure it doesn't overflow the container */
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(50%, 1fr));
        gap: 10px;
        vertical-align: middle;
    }
}

.drop-item {
    border-left: 1px cornflowerblue solid;
    border-right: 1px cornflowerblue solid;
    border-bottom: 1px cornflowerblue solid;
    width: 100%;
}

button, #btn1 {
    color: cornflowerblue;
    margin-top: 1%;
    padding : 1%;
    width: 20%;
    background-color: #181818;
    border: 1px cornflowerblue solid;
}

#bigImg {
    padding: 3%;
    text-align: center;
    background-color: #1f1e1e;
    border: 2px #C0C0C0 solid;
    border-radius: 10px;
    overflow: hidden;
    margin: 0;
}

.big-img {
    width: 100%;
}

#load_bar {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 4px;
    background-color: transparent;
    z-index: 9999;
}

.load_progress {
    width: 0;
    height: 100%;
    background-color: cornflowerblue;
    animation: loading 2s linear infinite;
}

@keyframes loading {
    0% {
        width: 0;
    }
    50% {
        width: 50%;
    }
    100% {
        width: 100%;
    }
}

